@@ -43,6 +43,7 @@ documents those changes that are of interest to users and administrators.
     when read in from the slurm.conf file.
  -- Don't consider partitions without enough nodes in reservation,
     main scheduler.
+ -- Set SLURM_NTASKS correctly if having to determine from other options.
 
 * Changes in Slurm 18.08.3
 ==========================
